# fastapi_tutorial

./: .gitignore  data.py  main.py  models.py  pyproject.toml  utils.py
app/: config.py  main.py  test_main.py
